--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1>情報基礎2</h1>
     </header>
     <section>
-      <p id="message">こんにちは。こんにちは。</p>
+      <p id="message" class="warning">こんにちは。こんにちは。</p>
       <p id="hidden-message">
         ここは隠れたメッセージです。
       </p>
